--- a/tonghop.html
+++ b/tonghop.html
@@ -4,31 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Management</title>
-
+  <title>User Management and MetaMask</title>
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* Căn giữa theo chiều dọc */
       justify-content: center;
-      /* Căn giữa theo chiều ngang */
       height: 100vh;
-      /* Đảm bảo chiều cao của body bằng với chiều cao màn hình */
       margin: 0;
-      /* Bỏ margin mặc định */
+    }
+
+    button {
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin: 10px;
+    }
+
+    #connectWalletButton {
+      background-color: #6a5acd;
+      color: white;
+      font-size: 18px;
     }
 
     #openFormButton {
+      background-color: #4CAF50;
+      color: white;
       display: none;
-      flex-direction: column;
-      gap: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: #f9f9f9;
     }
 
     #userForm {
@@ -42,66 +48,19 @@
       background-color: #f9f9f9;
     }
 
-    #userList,
-    #openFormButton {
+    #userList {
       display: none;
-      /* Ẩn ngay khi trang tải */
-    }
-
-    label {
-      font-weight: bold;
-    }
-
-    input[type="text"],
-    input[type="number"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    button {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    #connectWalletButton {
-      background-color: #6a5acd;
-      color: white;
-      padding: 15px 30px;
-      /* Tăng kích thước nút */
-      border: none;
-      border-radius: 5px;
-      font-size: 18px;
-      cursor: pointer;
-      display: block;
-      margin: 0 auto;
-      /* Đảm bảo nút được căn giữa */
-    }
-
-    #openFormButton {
-      background-color: #4CAF50;
-      color: white;
-      margin-bottom: 10px;
-    }
-
-    #addUserButton {
-      background-color: #008CBA;
-      color: white;
+      margin-top: 20px;
     }
 
     table {
       width: 60%;
       border-collapse: collapse;
-      margin-top: 20px;
     }
 
     th,
     td {
-      padding: 10px 20px;
+      padding: 10px;
       text-align: left;
       border-bottom: 1px solid #ddd;
     }
@@ -113,36 +72,53 @@
     .action-buttons {
       display: flex;
       gap: 5px;
-      /* Khoảng cách giữa các nút */
+    }
+
+    .edit-button,
+    .delete-button {
+      padding: 5px 10px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
     }
 
     .edit-button {
       background-color: #ffeb3b;
-      /* Màu vàng */
       color: black;
-      border: none;
-      padding: 5px 10px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: bold;
     }
 
     .delete-button {
       background-color: #f44336;
-      /* Màu đỏ */
       color: white;
-      border: none;
-      padding: 5px 10px;
-      border-radius: 4px;
-      cursor: pointer;
+    }
+
+    label {
       font-weight: bold;
+    }
+
+    #addUserButton {
+      background-color: #008CBA;
+      color: white;
+    }
+
+    input[type="text"],
+    input[type="number"] {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
   </style>
 </head>
 
 <body>
+  <h1>Connect MetaMask & Manage Users</h1>
+
   <!-- Button to connect wallet -->
-  <button id="connectWalletButton">Connect Wallet</button>
+  <button id="connectWalletButton">Connect MetaMask</button>
+  <div id="walletAddress"></div>
+
   <!-- Button to open the form -->
   <button id="openFormButton">Add User</button>
 
@@ -179,25 +155,49 @@
   </div>
 
   <script>
-    // Show and hide form
+    // Kiểm tra xem người dùng có MetaMask không
+    if (typeof window.ethereum !== 'undefined') {
+      console.log('MetaMask is installed!');
+    } else {
+      alert('Please install MetaMask!');
+    }
+
     const connectWalletButton = document.getElementById('connectWalletButton');
     const openFormButton = document.getElementById('openFormButton');
     const userForm = document.getElementById('userForm');
     const addUserButton = document.getElementById('addUserButton');
     const userListContainer = document.getElementById('userListContainer');
+    const walletAddress = document.getElementById('walletAddress');
+    const userList = document.getElementById('userList');
 
     let users = [];
     let editIndex = -1;
-    // Khi nhấn Connect Wallet, hiển thị nút Add User và danh sách người dùng
-    connectWalletButton.addEventListener('click', () => {
-      openFormButton.style.display = 'inline-block';
-      userList.style.display = 'block';
-      connectWalletButton.style.display = 'none'; // Ẩn nút Connect Wallet
+
+    // Khi nhấn Connect MetaMask, hiển thị nút Add User và danh sách người dùng
+    connectWalletButton.addEventListener('click', async () => {
+      try {
+        const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+        walletAddress.innerText = `Connected: ${accounts[0]}`;
+
+        const web3 = new Web3(window.ethereum);
+        const userAccount = accounts[0];
+        console.log('User Account:', userAccount);
+
+        const balance = await web3.eth.getBalance(userAccount);
+        console.log('Balance:', web3.utils.fromWei(balance, 'ether'), 'ETH');
+
+        openFormButton.style.display = 'inline-block';
+        userList.style.display = 'block';
+        connectWalletButton.style.display = 'none'; // Ẩn nút Connect MetaMask
+      } catch (error) {
+        console.error(error);
+        alert('Failed to connect MetaMask');
+      }
     });
 
     openFormButton.addEventListener('click', () => {
       userForm.style.display = 'flex';
-      document.getElementById('userList').style.display = 'none'; // Ẩn danh sách khi mở form
+      userList.style.display = 'none'; // Ẩn danh sách khi mở form
       clearForm();
       editIndex = -1;
     });
@@ -209,22 +209,19 @@
 
       if (name && age && address) {
         if (editIndex === -1) {
-          // Thêm người dùng mới
           users.push({ name, age, address });
         } else {
-          // Chỉnh sửa người dùng hiện có
           users[editIndex] = { name, age, address };
         }
 
         renderUsers();
         clearForm();
         userForm.style.display = 'none';
-        document.getElementById('userList').style.display = 'block'; // Hiển thị lại danh sách sau khi lưu
+        userList.style.display = 'block'; // Hiển thị lại danh sách sau khi lưu
       } else {
         alert("Please fill in all fields.");
       }
     });
-
 
     function renderUsers() {
       userListContainer.innerHTML = '';
@@ -244,7 +241,6 @@
         userListContainer.appendChild(row);
       });
     }
-
 
     function clearForm() {
       document.getElementById('name').value = '';
