--- a/vidu.html
+++ b/vidu.html
@@ -120,6 +120,7 @@
         // Có thể gọi API hoặc thực hiện thêm người dùng vào blockchain ở đây
       } else {
         alert("Please fill in all fields.");
+        // Cái ni cự thêm đại vô: logout
       }
     });
   </script>
