--- a/vidu.html
+++ b/vidu.html
@@ -112,7 +112,7 @@
       event.preventDefault();
 
       const name = document.getElementById('name').value;
-      const age = document.getElementById('age').value;
+      // Xoas i dong ti them lai
       const address = document.getElementById('address').value;
 
       if (name && age && address) {
@@ -120,6 +120,7 @@
         // Có thể gọi API hoặc thực hiện thêm người dùng vào blockchain ở đây
       } else {
         alert("Please fill in all fields.");
+        //edit file vidu.html in register branch
       }
     });
   </script>
